--- a/client/templates/uploadShop.html
+++ b/client/templates/uploadShop.html
@@ -9,7 +9,7 @@
                             <!-- <input type="hidden" name="contentCount" value="1" /> -->
                             <div class="form-group">
                                 <label for="shopName">Shop Name</label>
-                                <input ng-model="shop" name="shopName" type="text" class="form-control" id="input-code">
+                                <input ng-model="name" name="shopName" type="text" class="form-control" id="input-code">
                             </div>
                             <div class="form-group">
                                 <label for="shopCategory">Shop Category</label>
