config.js changed

--- a/client/templates/uploadShop.html
+++ b/client/templates/uploadShop.html
@@ -4,13 +4,13 @@
             <div class="panel panel-default">
                 <div class="panel-heading">Upload a Shop</div>
                 <!--      user location  -->
-                <p>
+                <!-- <p>
                     <button ng-click="geoFindMe()">Show my location</button>
                     <button ng-click="seeDistance(); getCoordenates(); geoFindMe()">Distance between</button>
                 </p>
                 <p>{{userLatitude}}</p>
                 <p>{{userLongitude}}</p>
-                <div id="demo"></div>
+                <div id="demo"></div> -->
                 <!--    user location end -->
                 <div class="panel-body">
                     <form role="form" id="registForm">
