home.html changed

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -5,7 +5,7 @@
             <div class="intro-lead-in">Let's save money...</div>
             <div class="intro-heading">and help the enviroment</div>
             <div class="intro-description">Check for products in your area, and save money getting products that would otherwise be wasted.</div>
-            <a ng-click="getProducts(); getCoordenates()" class="page-scroll btn btn-xl">Check products</a>
+            <a ng-click="getProducts()" class="page-scroll btn btn-xl">Check products</a>
         </div>
     </div>
 </header>
