--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -46,7 +46,7 @@
                                 <p>{{ product.shop.lat}}</p>
                                 <p>{{ product.shop.lng}}</p>
                                 <p>{{ product.shop.name}}</p>
-                                <p><a href="#" class="btn btn-danger" role="button" ng-click="removeProduct(product._id)">Remove</a></p>
+                                <!-- <p><a class="btn btn-danger" role="button" ng-click="removeProduct(product._id)">Remove</a></p> -->
                             </div>
                         </div>
                         <!-- <div class="thumbnail products">
