--- a/client/templates/uploadProducts.html
+++ b/client/templates/uploadProducts.html
@@ -72,7 +72,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                            <tr ng-repeat-start="product in products">
+                            <tr ng-repeat-start="product in allProducts">
                              <form ng-submit="updateProduct()" role="form" id="productUpdate">
                                 <td><img id="panel-image" src="{{product.image}}"></td>
                                 <td>{{product.name}}</td>
