--- a/client/templates/includes/footer.html
+++ b/client/templates/includes/footer.html
@@ -1,27 +1,31 @@
 <footer>
+<nav class=" navbar-fixed-bottom">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Your Website 2016</span>
+            <div class="col-xs-12 col-md-4">
+                <span class="copyright">Copyright &copy; Zero Waste 2017 by <a href="https://github.com/LeonelAV">LeonelAV</a></span>
             </div>
-            <div class="col-md-4">
-                <ul class="list-inline social-buttons">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                    </li>
-                </ul>
+            <div class="col-xs-12 col-sm-4">
+                <div><a href="http://www.skylabcoders.com/es/">SKYLABCODERS</a></div>
             </div>
-            <div class="col-md-4">
-                <ul class="list-inline quicklinks">
-                    <li><a href="#">Privacy Policy</a>
-                    </li>
-                    <li><a href="#">Terms of Use</a>
-                    </li>
-                </ul>
+             <div class="col-xs-12 col-md-4">
+                <span class="copyright">Twitter<a href="https://twitter.com/Leocatorze">Leocatorze</a></span>
             </div>
         </div>
     </div>
 </footer>
+<!-- <nav class="navbar navbar-default footer-view">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <div class="text-center"><a href="http://www.skylabcoders.com/es/">SKYLABCODERS 💻</a></div>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <div class="design text-center"><a href="https://github.com/lfernandezcall">Ad astra per aspera</a></div>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <div class="copyright text-center">© 2017, not made by a 🤖 </div>
+      </div>
+    </div>
+  </div>
+</nav> -->
