--- a/client/css/main.css
+++ b/client/css/main.css
@@ -942,6 +942,9 @@ select {
   color: white;
   transform: rotate(-8deg); }
 
+#shop-name {
+  justify-content: center; }
+
 /****** shops.html *******/
 .shop-name {
   margin-top: 100px;
@@ -967,10 +970,17 @@ select {
 #panel-image {
   width: 50px; }
 
-#map > * {
+#main > * {
   margin-top: 60px;
   margin: 0px;
   position: relative;
   position: fixed;
   height: 60vh;
   width: 100%; }
+
+.details-modal > h4 {
+  text-align: center; }
+
+#shop-link {
+  padding: 0 0;
+  font-size: 20px; }
