--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -5,7 +5,7 @@
             <div class="intro-lead-in">Let's save money...</div>
             <div class="intro-heading">and help the enviroment</div>
             <div class="intro-description">Check for products in your area, and save money getting products that would otherwise be wasted.</div>
-            <a ng-click="getProducts(); getCoordenates()" class="page-scroll btn btn-xl">Check products</a>
+            <a href="#!/products" ng-click="getCoordenates()" class="page-scroll btn btn-xl">Check products</a>
         </div>
     </div>
 </header>
@@ -61,7 +61,7 @@
     </div>
 </section>
 <!-- Portfolio Grid Section -->
-<section id="portfolio" class="bg-light-gray">
+<!-- <section id="portfolio" class="bg-light-gray">
     <div class="container">
         <div class="row last-added">
             <div class="col-lg-12 text-center">
@@ -111,5 +111,17 @@
             </div>
         </div>
     </div>
-</section>
-
+</section> -->
+<div class="container footer-home">
+        <div class="row">
+            <div class="col-xs-12 col-md-4">
+                <span class="copyright">Copyright &copy; Zero Waste 2017 by <a href="https://github.com/LeonelAV">LeonelAV</a></span>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <div><a href="http://www.skylabcoders.com/es/">SKYLABCODERS</a></div>
+            </div>
+             <div class="col-xs-12 col-md-4">
+                <span class="copyright">Twitter<a href="https://twitter.com/Leocatorze">Leocatorze</a></span>
+            </div>
+        </div>
+    </div>
