--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -6,7 +6,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a id="main-title" class="navbar-brand page-scroll" href="#page-top">Zero waste</a>
+                <a id="main-title" class="navbar-brand page-scroll" href="#!">Zero waste</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -22,6 +22,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#!/login">Log In</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#!/register">Register</a>
                     </li>
                 </ul>
             </div>
