--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,41 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" ng-app>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>zero waste</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom Fonts -->
-    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-    <!-- Theme CSS -->
-    <link href="../css/main.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<div class="wall">
- <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top nav-login" >
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            
-                <a id="main-title" class="navbar-brand page-scroll" href="index.html">Zero waste</a>
-            </div>
-            
-    </nav>
-<!-- log in Section -->
     <div id="login-section">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <div class="container">
             <div class="omb_login">
-                <h3 class="omb_authTitle">Login or Sign up</h3>
+                <h3 class="omb_authTitle">Login</h3>
                 </div>
                 <div class="row omb_row-sm-offset-3">
                     <div class="col-xs-12 col-sm-6">
@@ -50,28 +18,12 @@
                                 <input type="password" class="form-control" name="password" placeholder="Password">
                             </div>
                             <span class="help-block"></span>
-                            <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit">Login</button><hr>
-                            <p>Do you not have account?</p>
-                            <button id="login-register href="/register" class="btn btn-lg btn-primary btn-block btn-second" type="submit">Register in here</button>
+                            <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+    <div ng-include src="'templates/includes/footer.html'"></div>
 
- 
-    <!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
-    <!-- Contact Form JavaScript -->
-    <!-- Theme JavaScript -->
-    <script src="js/agency.min.js"></script>
-
-</body>
-
-</html>
